add Command cli df.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,19 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 build_dir = r:/work/WebServerESP32
+
 [env]
 platform = https://github.com/platformio/platform-espressif32.git
-board = adafruit_itsybitsy_esp32 
+board = adafruit_itsybitsy_esp32
 framework = arduino
 monitor_speed = 115200
 monitor_port = COM24
@@ -14,6 +25,8 @@ build_flags = -DBOARD_HAS_PSRAM
 [env:webServer-prog]
 debug_tool = esp-prog
 upload_protocol = esp-prog
+lib_deps = spacehuhn/SimpleCLI@^1.1.4
 
 [env:webServer-serial]
 upload_port = COM24
+lib_deps = spacehuhn/SimpleCLI@^1.1.4
