--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ board = adafruit_itsybitsy_esp32
 framework = arduino
 monitor_speed = 115200
 monitor_port = COM24
+
 build_flags = -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-mfix-esp32-psram-cache-strategy=memw
@@ -25,8 +26,16 @@ build_flags = -DBOARD_HAS_PSRAM
 [env:webServer-prog]
 debug_tool = esp-prog
 upload_protocol = esp-prog
-lib_deps = spacehuhn/SimpleCLI@^1.1.4
+lib_deps = 
+	spacehuhn/SimpleCLI@^1.1.4
+	links2004/WebSockets@^2.3.7
+	bblanchon/ArduinoJson@^6.20.0
+	miq19/eModbus@^1.6.0
 
 [env:webServer-serial]
 upload_port = COM24
-lib_deps = spacehuhn/SimpleCLI@^1.1.4
+lib_deps = 
+	spacehuhn/SimpleCLI@^1.1.4
+	links2004/WebSockets@^2.3.7
+	bblanchon/ArduinoJson@^6.20.0
+	miq19/eModbus@^1.6.0
