--- a/platformio.ini
+++ b/platformio.ini
@@ -16,24 +16,24 @@ platform = https://github.com/platformio/platform-espressif32.git
 board = adafruit_itsybitsy_esp32
 framework = arduino
 monitor_speed = 115200
-monitor_port = COM24
+monitor_port = COM5
 
 build_flags = -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-mfix-esp32-psram-cache-strategy=memw
 	-DCORE_DEBUG_LEVEL=5
 
-[env:webServer-prog]
-debug_tool = esp-prog
-upload_protocol = esp-prog
-lib_deps = 
-	spacehuhn/SimpleCLI@^1.1.4
-	links2004/WebSockets@^2.3.7
-	bblanchon/ArduinoJson@^6.20.0
-	miq19/eModbus@^1.6.0
+; [env:webServer-prog]
+; debug_tool = esp-prog
+; upload_protocol = esp-prog
+; lib_deps = 
+; 	spacehuhn/SimpleCLI@^1.1.4
+; 	links2004/WebSockets@^2.3.7
+; 	bblanchon/ArduinoJson@^6.20.0
+; 	miq19/eModbus@^1.6.0
 
 [env:webServer-serial]
-upload_port = COM24
+upload_port = COM5
 lib_deps = 
 	spacehuhn/SimpleCLI@^1.1.4
 	links2004/WebSockets@^2.3.7
