--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,13 @@ build_dir = r:/work/WebServerESP32
 platform = https://github.com/platformio/platform-espressif32.git
 board = adafruit_itsybitsy_esp32
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 9600
 monitor_port = COM5
+lib_deps = 
+	spacehuhn/SimpleCLI@^1.1.4
+	links2004/WebSockets@^2.3.7
+	bblanchon/ArduinoJson@^6.20.0
+	miq19/eModbus@^1.6.0
 
 build_flags = -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
@@ -32,10 +37,9 @@ build_flags = -DBOARD_HAS_PSRAM
 ; 	bblanchon/ArduinoJson@^6.20.0
 ; 	miq19/eModbus@^1.6.0
 
+[env:webServer-esp-prog]
+debug_tool = esp-prog
+upload_protocol = esp-prog
+debug_init_break = tbreak setup
 [env:webServer-serial]
 upload_port = COM5
-lib_deps = 
-	spacehuhn/SimpleCLI@^1.1.4
-	links2004/WebSockets@^2.3.7
-	bblanchon/ArduinoJson@^6.20.0
-	miq19/eModbus@^1.6.0
