1.DS1302칩에 대한 시간설정 함수를 삽입하여 완성함.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,31 +15,23 @@ build_dir = r:/work/WebServerESP32
 platform = https://github.com/platformio/platform-espressif32.git
 board = adafruit_itsybitsy_esp32
 framework = arduino
-monitor_speed = 9600
+monitor_speed = 115200
 monitor_port = COM5
 lib_deps = 
 	spacehuhn/SimpleCLI@^1.1.4
 	links2004/WebSockets@^2.3.7
 	bblanchon/ArduinoJson@^6.20.0
 	miq19/eModbus@^1.6.0
-
+	makuna/RTC@^2.3.5
 build_flags = -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-mfix-esp32-psram-cache-strategy=memw
 	-DCORE_DEBUG_LEVEL=5
 
-; [env:webServer-prog]
-; debug_tool = esp-prog
-; upload_protocol = esp-prog
-; lib_deps = 
-; 	spacehuhn/SimpleCLI@^1.1.4
-; 	links2004/WebSockets@^2.3.7
-; 	bblanchon/ArduinoJson@^6.20.0
-; 	miq19/eModbus@^1.6.0
-
 [env:webServer-esp-prog]
 debug_tool = esp-prog
 upload_protocol = esp-prog
 debug_init_break = tbreak setup
+
 [env:webServer-serial]
 upload_port = COM5
