--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-build_dir = r:/work/WebServerESP32
+;build_dir = r:/work/WebServerESP32
 
 [env]
-platform = https://github.com/platformio/platform-espressif32.git
-board = adafruit_itsybitsy_esp32
+;platform = https://github.com/platformio/platform-espressif32.git
+;board = adafruit_itsybitsy_esp32
+platform = C:/Users/STELLA/Documents/PlatformIO/platform-espressif32
+board = esp-wrover-kit_8M
+
 framework = arduino
 monitor_speed = 115200
 monitor_port = COM5
