1. HTML문서를 간단하게 하여 받을 수 있게 처리 함.2.FileUpload 및 serverIndex파일을 처리하였으며 로그인 옶션으로 처리함.

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@
 platform = C:/Users/STELLA/Documents/PlatformIO/platform-espressif32
 board = esp-wrover-kit_8M
 
+;board_build.arduino.memory_type = dio_opi 
+
 framework = arduino
 monitor_speed = 115200
 monitor_port = COM5
