드디어 완결을 함

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ src/esp32_8720_arduino.code-workspace
 UploadFiles/webServer-serial - Shortcut.lnk
 UploadFiles/test1.js
 doc/
+UploadFiles/index_back01.html
+UploadFiles/index_back01.js
 *~
-
