--- a/platformio.ini
+++ b/platformio.ini
@@ -16,12 +16,14 @@
 ;board = adafruit_itsybitsy_esp32
 platform = C:/Users/STELLA/Documents/PlatformIO/platform-espressif32
 board = esp-wrover-kit_8M
-
+board_build.partitions = partitions.csv
+;board_build.arduino.memory_type = psram
 ;board_build.arduino.memory_type = dio_opi 
 
 framework = arduino
-monitor_speed = 115200
-monitor_port = COM5
+;monitor_speed = 115200
+monitor_speed = 9600 
+monitor_port = COM9
 lib_deps = 
 	spacehuhn/SimpleCLI@^1.1.4
 	links2004/WebSockets@^2.3.7
@@ -31,7 +33,7 @@ lib_deps =
 build_flags = -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-mfix-esp32-psram-cache-strategy=memw
-	-DCORE_DEBUG_LEVEL=5
+	;-DCORE_DEBUG_LEVEL=5
 
 [env:webServer-esp-prog]
 debug_tool = esp-prog
@@ -39,4 +41,4 @@ upload_protocol = esp-prog
 debug_init_break = tbreak setup
 
 [env:webServer-serial]
-upload_port = COM5
+upload_port = COM9
