-PSRAM이 여기서늘 읽힌다. -NTC루틴을 변경하였다.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ UploadFiles/index_back01.html
 UploadFiles/index_back01.js
 UploadFiles/Deploy/
 *~
+UploadFiles/Deploy - Shortcut.lnk
+UploadFiles/*.bin
